# ugame

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md
.github/wokflows/: cmake-multi-platform.yml
.github/workflows/: cmake-multi-platform.yml
assets/: barrel.frag  blur.frag  checker.frag  checker.vert  cube.frag  cube.vert  grey_scale.frag  hdr.vert  label.frag  label.vert  level_apple.lua  level_banana.lua  level_kiwi.lua  level_mango.lua  level_papaya.lua  level_pear.lua  line.frag  line.vert  post_process.frag  shadow.frag  shadow.vert  simple.frag  simple.vert  ssao.frag  ssao_apply.frag  wine_barrel.fbx
include/: auto_release.h  buffer.h  buffer_writer.h  camera.h  config.h.in  cube_map.h  debug_ui.h  ensure.h  entity.h  error.h  event.h  exception.h  file.h  frame_buffer.h  key.h  key_event.h  log.h  mapped_file.h  material.h  matrix4.h  mesh.h  mesh_data.h  mesh_loader.h  model_loader.h  mouse_button_event.h  mouse_event.h  opengl.h  pass_key.h  renderer.h  resource_loader.h  scene.h  shader.h  texture.h  texture_sampler.h  tlv_entry.h  tlv_reader.h  vector3.h  vertex_data.h  window.h
include/core/: exception.h  key.h
include/events/: event.h  key_event.h  mouse_button_event.h  mouse_event.h  stop_event.h
include/game/: aabb.h  camera_object_transformer.h  chain.h  frustum_plane.h  game.h  game_state.h  inverse_camera_object_transformer.h  object_transformer.h  player.h  settings.h  static_object_transformer.h  transformed_entity.h  transforms.h
include/game/levels/: level.h  level_apple.h  level_kiwi.h  lua_level.h
include/game/routines/: base_routine.h  input_routine.h  level_routine.h  main_menu_routine.h  physics_routine.h  render_routine.h  routine_base.h  sound_routine.h
include/graphics/: buffer.h  camera.h  color.h  cube_map.h  debug_ui.h  frame_buffer.h  frustum_plane.h  line_data.h  material.h  mesh.h  mesh_data.h  opengl.h  renderer.h  scene.h  shader.h  shape_wireframe_renderer.h  text_factory.h  texture.h  texture_sampler.h  vertex_data.h
include/graphics/ui/: label.h
include/loaders/: mesh_loader.h  resource_loader.h
include/math/: aabb.h  frustum_plane.h  matrix3.h  matrix4.h  quaternion.h  tranform.h  transform.h  vector3.h  vector4.h
include/math_primitives/: line_data.h  matrix4.h  vector3.h
include/messaging/: auto_subscribe.h  message_bus.h  subscriber.h
include/physics/: box_shape.h  capsule_shape.h  character_controller.h  cylinder_shape.h  debug_renderer.h  jolt_utils.h  mesh_shape.h  physics_sytem.h  rigid_body.h  shape.h  sphere_shape.h  transformed_shape.h
include/primitives/: color.h  debug_lines.h  entity.h  line_data.h  vertex_data.h
include/resources/: resource_cache.h  resource_loader.h
include/scheduler/: scheduler.h  task.h  wait.h
include/scripting/: lua_script.h  script_loader.h  script_runner.h  vector3_interop.h
include/sound/: sound_data.h
include/tlv/: tlv_entry.h  tlv_reader.h  tlv_writer.h
include/utils/: auto_release.h  compress.h  decompress.h  ensure.h  exception.h  formatter.h  string_unordered_map.h
src/: CMakeLists.txt  buffer.cpp  buffer_writer.cpp  camera.cpp  cube_map.cpp  entity.cpp  exception.cpp  frame_buffer.cpp  key_event.cpp  main.cpp  material.cpp  mesh.cpp  mesh_loader.cpp  model_loader.cpp  mouse_button_event.cpp  mouse_event.cpp  renderer.cpp  resource_loader.cpp  shader.cpp  texture.cpp  texture_sampler.cpp  tlv_entry.cpp  tlv_reader.cpp  window.cpp  window_glfw.cpp  window_win32.cpp
src/core/: CMakeLists.txt  buffer_writer.cpp  exception.cpp
src/events/: CMakeLists.txt  key_event.cpp  mouse_button_event.cpp  mouse_event.cpp
src/game/: CMakeLists.txt  camera_object_transformer.cpp  game.cpp  inverse_camera_object_transformer.cpp  player.cpp  settings.cpp  static_object_transformer.cpp
src/game/levels/: CMakeLists.txt  level_apple.cpp  level_kiwi.cpp  lua_level.cpp
src/game/routines/: CMakeLists.txt  base_routine.cpp  input_routine.cpp  level_routine.cpp  main_menu_routine.cpp  physics_routine.cpp  render_routine.cpp  routine_base.cpp  sound_routine.cpp
src/glfw/: debug_ui.cpp  window.cpp
src/graphics/: CMakeLists.txt  buffer.cpp  camera.cpp  cube_map.cpp  frame_buffer.cpp  material.cpp  mesh.cpp  renderer.cpp  shader.cpp  shape_wireframe_renderer.cpp  text_factory.cpp  texture.cpp  texture_sampler.cpp
src/loaders/: CMakeLists.txt  mesh_loader.cpp  resource_loader.cpp
src/math/: CMakeLists.txt  aabb.cpp  frustum_plane.cpp  vector3.cpp
src/messaging/: CMakeLists.txt  message_bus.cpp
src/physics/: CMakeLists.txt  box_shape.cpp  capsule_shape.cpp  character_controller.cpp  cylinder_shape.cpp  debug_renderer.cpp  jolt_utils.cpp  mesh_shape.cpp  physics_system.cpp  rigid_body.cpp  shape.cpp  sphere_shape.cpp  transformed_shape.cpp
src/posix/: file.cpp  mapped_file.cpp  sound_routine.cpp
src/primitives/: debug_lines.cpp  entity.cpp
src/resources/: CMakeLists.txt  resource_loader.cpp
src/scheduler/: CMakeLists.txt  scheduler.cpp  task.cpp
src/scripting/: CMakeLists.txt  lua_level.cpp  lua_script.cpp  script_loader.cpp  vector3_interop.cpp
src/tlv/: CMakeLists.txt  tlv_entry.cpp  tlv_reader.cpp  tlv_writer.cpp
src/utils/: CMakeLists.txt  compress.cpp  decompress.cpp
src/win32/: debug_ui.cpp  file.cpp  mapped_file.cpp  sound_routine.cpp  window.cpp
tests/: CMakeLists.txt  camera_object_transformer_tests.cpp  camera_tests.cpp  chain_tests.cpp  compress_tests.cpp  ensure_tests.cpp  frustum_tests.cpp  inverse_camera_object_transformer_tests.cpp  lua_interop_tests.cpp  lua_script_tests.cpp  matrix3_tests.cpp  matrix4_tests.cpp  message_bus_tests.cpp  quaternion_tests.cpp  resource_cache_tests.cpp  scheduler_tests.cpp  script_runner_tests.cpp  static_object_transformer_tests.cpp  test_utils.h  tlv_entry_tests.cpp  tlv_reader_tests.cpp  tlv_writer_tests.cpp  transform_tests.cpp  utils.h  vector3_tests.cpp  vector4_tests.cpp
tools/resource_packer/: CMakeLists.txt  main.cpp
